# labs

./: CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build.yml
lab1/task1/: main.c
lab1/task2/: main.c
lab1/task3/: main.c
lab1/task4/: main.c
lab2/task1/: main.c
lab2/task2/: main.c
lab2/task3/: main.c
lab3/task1/: main.c
lab3/task2/: main.c
lab3/task3/: main.c
lab4/task1/: functions.c  header.h  main.c
lab4/task2/: functions.c  header.h  main.c
lab4/task3/: functions.c  header.h  main.c
lab5/task1/: functions.c  main.c
lab5/task2/: functions.c  main.c
lab5/task3/: functions.c  header.h  main.c
lab6/task1/: functions.c  main.c
lab6/task2/: functions.c  header.h  main.c
lab7/: functions.c  header.h  main.c
lab8/: functions.c  header.h  main.c
term1/lab1/task2/: main.c
term1/lab1/task3/: main.c
term1/lab1/task4/: main.c
term1/lab2/task1/: main.c
term1/lab2/task2/: main.c
term1/lab2/task3/: main.c
term1/lab3/task1/: main.c
term1/lab3/task2/: main.c
term1/lab3/task3/: main.c
term1/lab4/task1/: functions.c  header.h  main.c
term1/lab4/task2/: functions.c  main.c
term1/lab4/task3/: functions.c  main.c
term1/lab5/task1/: functions.c  header.h  main.c
term1/lab5/task2/: functions.c  header.h  main.c
term1/lab5/task3/: functions.c  main.c
term1/lab6/task1/: functions.c  header.h  main.c
term1/lab6/task2/: functions.c  header.h  main.c
term1/lab7/: functions.c  header.h  main.c
term1/lab8/: functions.c  header.h  main.c
term2/lab1/: basket.txt  functions.c  functions.h  main.c  sorts.c  sorts.h
term2/lab2/: compress.c  decompress.c  functions.c  functions.h  functionsForCompressing.c  functionsForCompressing.h  functionsForDecompressing.c  functionsForDecompressing.h
term2/lab2/file/: book.txt  book.txt.compressed  book.txt.decompressed
term2/lab3/: functions.c  functions.h  main.c
term2/lab4/: DataBase.txt  binarytree.c  binarytree.h  functions.c  functions.h  main.c
term2/lab5/: DataBase.txt  cache.c  cache.h  functions.c  functions.h  main.c
test/: functions.c  functions.h  main.c
